
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/Popup_Available_Networks"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <TextView
            android:id="@+id/is_BT_Connected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="24dp"
            android:text="@string/text_BT_connection"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ToggleButton
            android:id="@+id/toggleButtonBT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/is_BT_Connected"
            android:layout_alignBottom="@+id/is_BT_Connected"
            android:layout_alignParentRight="true"
            android:layout_marginRight="16dp"
            android:textOn="Enabled"
            android:textOff="Disabled"
            android:onClick="onToggleBTClicked" />
        
        <TextView
            android:id="@+id/is_Wifi_Connected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="24dp"
            android:layout_below="@+id/is_BT_Connected"
            android:text="@string/text_wifi_state"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ToggleButton
            android:id="@+id/toggleButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/is_Wifi_Connected"
            android:layout_alignBottom="@+id/is_Wifi_Connected"
            android:layout_alignParentRight="true"
            android:layout_marginRight="16dp"
            android:textOn="Enabled"
            android:textOff="Disabled"
            android:onClick="onToggleClicked" />

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/toggleButton1"
            android:layout_marginTop="24dp"
            android:text="@string/text_wifi_connected"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/wifi_scan_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TextView01"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/text_scan_for_wifi" />

        <ListView
            android:id="@+id/discoveredWifi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/wifi_scan_button"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/TextView01"
            android:layout_alignBottom="@+id/TextView01"
            android:layout_alignRight="@+id/toggleButton1"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </RelativeLayout>
